--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: notebook
+name: persistence-demo
 channels:
   - conda-forge
   - defaults
@@ -16,7 +16,7 @@ dependencies:
   - boost-cpp=1.74.0=hc6e9bd1_3
   - brotli=1.0.9=he6710b0_2
   - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2022.2.1=h06a4308_0
+  - ca-certificates=2022.3.18=h06a4308_0
   - certifi=2021.10.8=py39h06a4308_2
   - cffi=1.15.0=py39hd667e15_1
   - cgal-cpp=5.3.1=h09f2f54_0
@@ -50,6 +50,7 @@ dependencies:
   - ipywidgets=7.6.5=pyhd3eb1b0_1
   - jedi=0.18.1=py39h06a4308_1
   - jinja2=3.0.3=pyhd3eb1b0_0
+  - joblib=1.1.0=pyhd3eb1b0_0
   - jpeg=9d=h7f8727e_0
   - jsonschema=3.2.0=pyhd3eb1b0_2
   - jupyter=1.0.0=py39h06a4308_7
@@ -112,7 +113,7 @@ dependencies:
   - nss=3.69=hb5efdd6_1
   - numpy=1.21.2=py39h20f2e39_0
   - numpy-base=1.21.2=py39h79a1101_0
-  - openssl=1.1.1m=h7f8727e_0
+  - openssl=1.1.1n=h7f8727e_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
@@ -139,6 +140,7 @@ dependencies:
   - qtconsole=5.2.2=pyhd3eb1b0_0
   - qtpy=1.11.2=pyhd3eb1b0_0
   - readline=8.1.2=h7f8727e_1
+  - scikit-learn=1.0.2=py39h51133e4_1
   - scipy=1.7.3=py39hc147768_0
   - send2trash=1.8.0=pyhd3eb1b0_1
   - setuptools=58.0.4=py39h06a4308_0
@@ -148,11 +150,12 @@ dependencies:
   - stack_data=0.2.0=pyhd3eb1b0_0
   - terminado=0.13.1=py39h06a4308_0
   - testpath=0.5.0=pyhd3eb1b0_0
+  - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.11=h1ccaba5_0
   - tornado=6.1=py39h27cfd23_0
   - traitlets=5.1.1=pyhd3eb1b0_0
-  - typing-extensions=3.10.0.2=hd3eb1b0_0
-  - typing_extensions=3.10.0.2=pyh06a4308_0
+  - typing-extensions=4.1.1=hd3eb1b0_0
+  - typing_extensions=4.1.1=pyh06a4308_0
   - tzdata=2021e=hda174b7_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - webencodings=0.5.1=py39h06a4308_1
@@ -167,4 +170,4 @@ dependencies:
     - pyqt5-sip==4.19.18
     - pyqtchart==5.12
     - pyqtwebengine==5.12.1
-prefix: /home/georg/anaconda3/envs/notebook
+prefix: /home/georg/anaconda3/envs/persistence-demo
