--- a/environment.yml
+++ b/environment.yml
@@ -13,14 +13,23 @@ dependencies:
   - backcall=0.2.0
   - blas=1.0
   - bleach=4.1.0
+  - blosc=1.21.0
   - boost-cpp=1.74.0
   - brotli=1.0.9
+  - brunsli=0.1
   - bzip2=1.0.8
+  - c-ares=1.18.1
   - ca-certificates=2022.3.18
   - certifi=2021.10.8
   - cffi=1.15.0
+  - cfitsio=3.470
   - cgal-cpp=5.3.1
+  - charls=2.2.0
+  - cloudpickle=2.0.0
+  - colorama=0.4.4
   - cycler=0.11.0
+  - cytoolz=0.11.0
+  - dask-core=2022.2.1
   - dbus=1.13.18
   - debugpy=1.5.1
   - decorator=5.1.1
@@ -32,6 +41,7 @@ dependencies:
   - fontconfig=2.13.1
   - fonttools=4.25.0
   - freetype=2.11.0
+  - fsspec=2022.2.0
   - gettext=0.19.8.1
   - giflib=5.2.1
   - glib=2.68.4
@@ -41,6 +51,8 @@ dependencies:
   - gstreamer=1.18.5
   - gudhi=3.5.0
   - icu=68.2
+  - imagecodecs=2021.8.26
+  - imageio=2.9.0
   - importlib-metadata=4.8.2
   - importlib_metadata=4.8.2
   - intel-openmp=2021.4.0
@@ -59,13 +71,19 @@ dependencies:
   - jupyter_core=4.9.2
   - jupyterlab_pygments=0.1.2
   - jupyterlab_widgets=1.0.0
+  - jxrlib=1.1
   - keyutils=1.6.1
   - kiwisolver=1.3.2
   - krb5=1.19.3
   - lcms2=2.12
   - ld_impl_linux-64=2.35.1
+  - lerc=3.0
+  - libaec=1.0.4
   - libclang=11.1.0
+  - libcurl=7.80.0
+  - libdeflate=1.8
   - libedit=3.1.20191231
+  - libev=4.33
   - libevent=2.1.10
   - libffi=3.3
   - libgcc-ng=11.2.0
@@ -75,11 +93,13 @@ dependencies:
   - libgomp=11.2.0
   - libiconv=1.16
   - libllvm11=11.1.0
+  - libnghttp2=1.46.0
   - libogg=1.3.4
   - libopus=1.3.1
   - libpng=1.6.37
   - libpq=13.3
   - libsodium=1.0.18
+  - libssh2=1.9.0
   - libstdcxx-ng=11.2.0
   - libtiff=4.2.0
   - libuuid=1.0.3
@@ -89,6 +109,8 @@ dependencies:
   - libxcb=1.14
   - libxkbcommon=1.0.3
   - libxml2=2.9.12
+  - libzopfli=1.0.3
+  - locket=0.2.1
   - lz4-c=1.9.3
   - markupsafe=2.0.1
   - matplotlib=3.5.1
@@ -108,15 +130,18 @@ dependencies:
   - nbformat=5.1.3
   - ncurses=6.3
   - nest-asyncio=1.5.1
+  - networkx=2.7.1
   - notebook=6.4.8
   - nspr=4.32
   - nss=3.69
   - numpy=1.21.2
   - numpy-base=1.21.2
+  - openjpeg=2.4.0
   - openssl=1.1.1n
   - packaging=21.3
   - pandocfilters=1.5.0
   - parso=0.8.3
+  - partd=1.2.0
   - pcre=8.45
   - pexpect=4.8.0
   - pickleshare=0.7.5
@@ -135,24 +160,31 @@ dependencies:
   - python=3.9.7
   - python-dateutil=2.8.2
   - python_abi=3.9
+  - pywavelets=1.1.1
+  - pyyaml=6.0
   - pyzmq=22.3.0
   - qt=5.12.9
   - qtconsole=5.2.2
   - qtpy=1.11.2
   - readline=8.1.2
+  - scikit-image=0.19.2
   - scikit-learn=1.0.2
   - scipy=1.7.3
   - send2trash=1.8.0
   - setuptools=58.0.4
   - sip=4.19.13
   - six=1.16.0
+  - snappy=1.1.8
   - sqlite=3.38.0
   - stack_data=0.2.0
   - terminado=0.13.1
   - testpath=0.5.0
   - threadpoolctl=2.2.0
+  - tifffile=2021.7.2
   - tk=8.6.11
+  - toolz=0.11.2
   - tornado=6.1
+  - tqdm=4.63.0
   - traitlets=5.1.1
   - typing-extensions=4.1.1
   - typing_extensions=4.1.1
@@ -162,7 +194,9 @@ dependencies:
   - wheel=0.37.1
   - widgetsnbextension=3.5.2
   - xz=5.2.5
+  - yaml=0.2.5
   - zeromq=4.3.4
+  - zfp=0.5.5
   - zipp=3.7.0
   - zlib=1.2.11
   - zstd=1.4.9
