--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: persistence-demo
+name: tda
 channels:
   - conda-forge
   - defaults
@@ -204,4 +204,4 @@ dependencies:
     - pyqt5-sip==4.19.18
     - pyqtchart==5.12
     - pyqtwebengine==5.12.1
-prefix: /home/georg/anaconda3/envs/persistence-demo
+prefix: /home/georg/anaconda3/envs/tda
